--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 		<div class="container">
 			<nav>
 				<ul>
-					<li class="contact">/contact</li>
-					<li class="about">/about</li>
+					<li id="contact">/contact</li>
+					<li id="about">/about</li>
 				</ul>
 			</nav>
 
@@ -51,6 +51,7 @@
 				</ul>
 			</div>
 		</div>
+
 		<script src="js/winbox.bundle.js"></script>
 		<script src="js/main.js"></script>
 	</body>
